[package]
name = "helloworld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
externref = "0.1.0"
lazy_static = "1.4.0"
# externref = { version = "0.1.0", features = ["processor"] }
libc = "0.2.141"
nix = "0.26.2"
seq-macro = "0.3.3"
wasm-bindgen = "0.2.74"
# wasi = "0.11.0"

[lib]
crate-type = ['cdylib']

[package.metadata]
wasm-opt = false
